--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+@import 'styles/_shared.scss';
+
+body {
+  color: $twitterBlack;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +41,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.testText {
+  color: $twitterBlue;
+}
+
+h2 {
+  font-family: $twitterFont;
+  font-size: 18px;
+  font-weight: 800;
+  color: $twitterBlack;
+  padding: 10px 20px;
+  margin: 0;
+}
+
+h3 {
+  font-family: $twitterFont;
+  font-size: 16px;
+  font-weight: 700;
+  color: $twitterBlack;
+  margin: 0;
 }
